# Alpamayo-for-orin-nano

./: CMakeLists.txt  README.md  package.xml
config/: dashboard_params.yaml
docs/: index.html
docs/css/: fsd.css  style.css
docs/fsd/: bev.html  fsd-bev.html  index.html
docs/js/: fsd.js  lidar-viewer.js  wasm-lidar-processor.js
docs/js/wasm/: alpamayo_wasm.d.ts  alpamayo_wasm.js  alpamayo_wasm_bg.wasm  alpamayo_wasm_bg.wasm.d.ts  package.json
launch/: dashboard.launch.py  jetson_orin.launch.py
models/: __init__.py  camera_cnn.py  lidar_temporal.py  planner_head.py  v14_architecture.py  v14_lite.py
ros2_web_dashboard/: __init__.py
scripts/: build_tensorrt.py  camera_feature_node.py  camera_stream_node.py  export_onnx.py  inference_trt.py  lidar_bev_node.py  lidar_temporal_node.py  planner_node.py  planner_viz_node.py  train_v14.py  vehicle_state_node.py
wasm/: .gitignore  Cargo.toml
wasm/src/: lib.rs
web/: index.html
web/css/: dashboard.css
web/js/: dashboard.js
web/tesla/: index.html
