[package]
name = "alpamayo_wasm"
version = "0.1.0"
edition = "2021"
description = "WASM module for Alpamayo LiDAR BEV processing"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "ImageData",
] }

# Better error messages in debug mode
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
